electron-reload configured

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>Cool Xivig</title>
   </head>
-  <body>
-    Well hey there!!!
+  <body style="background-color: orange;">
+    <h2 style="color: green; ">Cool website for xivig</h2>
+    <p>Lorem ipsum is a dummy text for fill up any content.</p>
   </body>
 </html>
